debugged styling issues on small screensize and horizontal ipad

--- a/src/Components/CarouselSlide/CarouselSlide.styles.scss
+++ b/src/Components/CarouselSlide/CarouselSlide.styles.scss
@@ -18,7 +18,7 @@
 
     .image-gallery-content .image-gallery-slide-wrapper .image-gallery-icon {
       z-index: 10 !important;
-      top: 110%;
+      top: 109%;
       color: #CCB0A2;
       filter: none;
     }
@@ -106,6 +106,36 @@
   } 
 }
 
+@media screen and (max-width: 1100px) {
+  .carousel-container .image-gallery {
+    width: 75%;
+    top: -10%;
+
+    .image-gallery-content .image-gallery-slide-wrapper .image-gallery-icon {
+      top: 100%;
+    }
+
+    .image-gallery-slides .image-gallery-description {
+        bottom: -50px;
+    }
+  } 
+}
+
+@media screen and (max-width: 800px) {
+  .carousel-container .image-gallery {
+    width: 85%;
+    top: 0;
+
+    .image-gallery-content .image-gallery-slide-wrapper .image-gallery-icon {
+      top: 100%;
+    }
+
+    .image-gallery-slides .image-gallery-description {
+        bottom: -50px;
+    }
+  } 
+}
+
 @media screen and (max-width: 550px) {
   .carousel-container .image-gallery {
 
@@ -169,7 +199,7 @@
   } 
 }
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 330px) {
   .carousel-container .image-gallery {
       height: 100%
   } 
